# OpenGL-Registry

./: CMakeLists.txt
cmake/: Config.cmake.in
